; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_volume.c_set_expr.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_volume.c_set_expr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@var_names = common dso_local global i32 0, align 4
@AV_LOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [50 x i8] c"Error when evaluating the volume expression '%s'\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i8*, i8*)* @set_expr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_expr(i32** %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i32** %0, i32*** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32* null, i32** %9, align 8
  %10 = load i32**, i32*** %5, align 8
  %11 = load i32*, i32** %10, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %3
  %14 = load i32**, i32*** %5, align 8
  %15 = load i32*, i32** %14, align 8
  store i32* %15, i32** %9, align 8
  br label %16

16:                                               ; preds = %13, %3
  %17 = load i32**, i32*** %5, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = load i32, i32* @var_names, align 4
  %20 = load i8*, i8** %7, align 8
  %21 = call i32 @av_expr_parse(i32** %17, i8* %18, i32 %19, i32* null, i32* null, i32* null, i32* null, i32 0, i8* %20)
  store i32 %21, i32* %8, align 4
  %22 = load i32, i32* %8, align 4
  %23 = icmp slt i32 %22, 0
  br i1 %23, label %24, label %32

24:                                               ; preds = %16
  %25 = load i8*, i8** %7, align 8
  %26 = load i32, i32* @AV_LOG_ERROR, align 4
  %27 = load i8*, i8** %6, align 8
  %28 = call i32 @av_log(i8* %25, i32 %26, i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str, i64 0, i64 0), i8* %27)
  %29 = load i32*, i32** %9, align 8
  %30 = load i32**, i32*** %5, align 8
  store i32* %29, i32** %30, align 8
  %31 = load i32, i32* %8, align 4
  store i32 %31, i32* %4, align 4
  br label %35

32:                                               ; preds = %16
  %33 = load i32*, i32** %9, align 8
  %34 = call i32 @av_expr_free(i32* %33)
  store i32 0, i32* %4, align 4
  br label %35

35:                                               ; preds = %32, %24
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i32 @av_expr_parse(i32**, i8*, i32, i32*, i32*, i32*, i32*, i32, i8*) #1

declare dso_local i32 @av_log(i8*, i32, i8*, i8*) #1

declare dso_local i32 @av_expr_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
